--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,7 +56,7 @@ body {
     letter-spacing: 2px;
   }
 
-  .body-s {
+  .body-m {
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
