--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,7 +70,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: none;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -80,4 +80,12 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--color-neutral-500);
+}
+
+.dark ::-webkit-scrollbar-thumb {
+  background-color: var(--color-neutral-600);
+}
+
+.dark ::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-neutral-400);
 }
