chore: Update global styles to support dark mode for scrollbar appearance

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,11 @@ body {
   background-color: var(--color-neutral-100);
 }
 
+.dark body {
+  color: var(--color-neutral-100);
+  background-color: var(--color-neutral-1000);
+}
+
 @layer utilities {
   .heading-m {
     /* Heading (M) */
